--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,4 @@
-$sw_yellow: var(--sw_yellow);
-$sw_black: var(--sw_black);
-
-$font_white: var(--font_white);
-$font_yellow: var(--font_yellow);
-$font_black: var(--font_black);
-
-$bg_white: var(--bg_white);
-$bg_grey: var(--bg_grey);
-$bg_black: var(--bg_black);
+@import "./.variables.scss";
 
 .wrapper {
   max-width: 100vw;
@@ -45,6 +36,8 @@ $bg_black: var(--bg_black);
 }
 
 .main {
+  padding: 1rem 0;
+
   background-color: $bg_white;
 
   grid-area: content;
@@ -79,40 +72,32 @@ $bg_black: var(--bg_black);
     }
   }
 
-  .section-wrapper {
-    padding: 1.5rem 0.25rem;
+  .nav {
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
 
     background-color: $sw_black;
 
-    .section-slideshow {
-      display: grid;
-      grid-template: 1fr / auto 1fr auto;
-      grid-template-areas: "left_btn slidershow right_btn";
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    gap: 0.5rem;
 
-      justify-items: stretch;
-      align-items: stretch;
-      justify-content: center;
-      align-content: center;
+    .nav__link {
+      padding: 1rem 0.5rem;
+      border: 2px solid $sw_yellow;
+      border-radius: 0.5rem;
 
-      .section-slideshow__btn {
-        min-height: 20vh;
+      color: $sw_yellow;
+      font: 800 1.5rem/100% "Bebas Neue", sans-serif;
+      text-decoration: none;
+    }
 
-        border: none;
-        border-radius: 0.25rem;
-        padding: 0.5rem;
+    .nav__link--active {
+      color: $sw_black;
 
-        background-color: $sw_yellow;
-
-        &:active,
-        &:hover {
-          outline: none;
-          background-color: $font_yellow;
-        }
-      }
-
-      planets, residents, vehicles { grid-area: slidershow; margin: 0.5rem; }
-      .section-slideshow__btn--left { grid-area: left_btn; }
-      .section-slideshow__btn--right { grid-area: right_btn; }
+      background-color: $sw_yellow;
     }
   }
 }
