Added Residents Slide Show, Swapi Query

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,13 @@
       Galaxy's Planets
     </a>
     <a class="nav__link"
-      [routerLink]="['/residents', 1]"
+      routerLink="/residents"
       routerLinkActive="nav__link--active"
       >
       Planet's Residents
     </a>
     <a class="nav__link"
-      [routerLink]="['/vehicles', 1]"
+      routerLink="/vehicles"
       routerLinkActive="nav__link--active"
       >
       Resident's Vehicles
